--- a/Python_tutorials/Lecture_2_functions.ipynb
+++ b/Python_tutorials/Lecture_2_functions.ipynb
@@ -223,11 +223,135 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Moving code into a function/for loop\n",
+    "\n",
+    "Simple task: print the minimum of each row of data.\n",
+    "\n",
+    "Basic steps:\n",
+    "- Get the basic code working with one example\n",
+    "- Take any constants out and make sure it still works\n",
+    "- Create a function with the input values the variables\n",
+    "- Test with example data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# First version - do each line by hand \n",
+    "test_data = np.random.uniform(0, 1, size=(3, 5))\n",
+    "\n",
+    "# Find the minimum for each row by copying and changing the row index\n",
+    "min_row1 = np.min(test_data[0, :])\n",
+    "min_row2 = np.min(test_data[1, :])\n",
+    "min_row3 = np.min(test_data[2, :])\n",
+    "\n",
+    "# Use the variable window to make sure the answer is correct, or print out the values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Doing this in another cell - but normally you'd do it \"in place\"\n",
+    "\n",
+    "Step 1: replace index numbers with variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the minimum for each row by copying and changing the row index\n",
+    "row = 0\n",
+    "min_row1 = np.min(test_data[row+0, :])\n",
+    "min_row2 = np.min(test_data[row+1, :])\n",
+    "min_row3 = np.min(test_data[row+2, :])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2 Move into a for loop - note how row is now the for loop variable \n",
+    "#          Also need to make some place to put each min_rowi\n",
+    "min_row = []\n",
+    "for row in range(0, 3):\n",
+    "    # Notice that row does not have a +1 or anything because it will be 0, then 1, then 2\n",
+    "    # Notice the append - this adds the value to the list\n",
+    "    min_row.append(np.min(test_data[row, :]))\n",
+    "\n",
+    "# Notice that min_row is a list with 3 values in it - the same as min_row1, min_row2, min_row3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 3: create a function with one input - the data\n",
+    "#  Write the def func_name(input)\n",
+    "#  Copy the code into the function, shift it over, and change the data name to the new one\n",
+    "#    You don't *have* to change the parameter name - you could keep it test_data, but that would be... weird\n",
+    "#  Return the row\n",
+    "# Remember: Executing this cell will not do anything (if your syntax is correct)\n",
+    "def func_min_all_rows(data):\n",
+    "    \"\"\" Find the minimum of all rows\n",
+    "    @param data is a numpy array of dimension 2\n",
+    "    @return a list with the minimum of each row\"\"\"\n",
+    "    # You don't *have* to change this name, either, but it can help you to remember that this is NOT the\n",
+    "    #   same variable as min_row above\n",
+    "    res_min_row = []\n",
+    "    for row in range(0, 3):\n",
+    "        # Notice that test_data is now data\n",
+    "        res_min_row.append(np.min(data[row, :]))\n",
+    "    \n",
+    "    # Don't forget this! It will still \"work\", but you won't get an answer back...\n",
+    "    return res_min_row\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2670839194165171, 0.5923138157812715, 0.09189321934555372] and \n",
+      "[0.2670839194165171, 0.5923138157812715, 0.09189321934555372] should be the same thing\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now write the test - with test_data, since we know the right answer for that\n",
+    "#   This sets data to be test_data, and test_result will be \n",
+    "test_result = func_min_all_rows(test_data)\n",
+    "\n",
+    "print(f\"{test_result} and \\n{min_row} should be the same thing\")"
+   ]
   }
  ],
  "metadata": {
@@ -246,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
