--- a/Python_tutorials/a_tutorial_classes.ipynb
+++ b/Python_tutorials/a_tutorial_classes.ipynb
@@ -40,11 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "abc = 10\n",
     "class PinballWall:\n",
+    "    abc = 15\n",
     "    # This is the creator for the class - it gets called when you make a class (see below)\n",
     "    #.  You don't call it directly...\n",
     "    def __init__(self, wall_type=\"Vertical\", intercept_value=None, a_b_c=None):\n",
@@ -61,6 +63,7 @@
     "        #    need to specify the intercept value\n",
     "        # Lets the user \"special case\" a vertical or horizontal wall, rather than having to convert to the\n",
     "        #   ax + by + c format\n",
+    "        abc = 3\n",
     "        if wall_type == \"Vertical\":\n",
     "            self.wall_type = \"Vertical\"\n",
     "            if intercept_value is None:\n",
@@ -114,19 +117,36 @@
     "        :return: a string\n",
     "        \"\"\"\n",
     "        # f\"\" creates a string; in this case, instead of printing it, just return it\n",
-    "        return f\"{self.abc[0]:0.3f}x + {self.abc[1]:0.3f}y + {self.abc[2]:0.3f}\"\n",
+    "        return f\"abc {abc} {self.abc[0]:0.3f}x + {self.abc[1]:0.3f}y + {self.abc[2]:0.3f}\"\n",
     "\n",
     "    def test_on_wall(self, x_y):\n",
     "        \"\"\" Pass in a point that should be on the wall; should return 0\n",
     "         @param x_y - xy point\n",
     "         @preturn True or False\"\"\"\n",
-    "        return np.isclose(self.evaluate_halfplane(x_y), 0.0)\n",
+    "        return np.isclose(self.evaluate_halfplane(x_y), 0.0, atol=0.01)\n",
     "\n",
     "    def test_origin_inside(self):\n",
     "        \"\"\" Test that we correctly oriented the wall so that (0,0) is inside\"\"\"\n",
     "        # Notice call to self\n",
     "        assert(self.inside([0, 0]))\n",
     "        return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"abc {abc}\")"
    ]
   },
   {
@@ -140,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,12 +181,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertical wall: abc 10 1.000x + 0.000y + -0.200\n",
+      "Horizontal wall: abc 10 0.000x + 1.000y + -0.200\n",
+      " ABC at the top level 10, abc in the class 15\n",
+      "Instance 1 [0.0, 1.0, -0.2] instance 2 [1.0, 0.0, -0.2]\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Vertical wall: {my_vert_wall}\")\n",
-    "print(f\"Horizontal wall: {my_horiz_wall}\")"
+    "print(f\"Horizontal wall: {my_horiz_wall}\")\n",
+    "print(f\" ABC at the top level {abc}, abc in the class {PinballWall.abc}\")\n",
+    "print(f\"Instance 1 {my_horiz_wall.abc} instance 2 {my_vert_wall.abc}\")"
    ]
   },
   {
@@ -184,14 +217,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vertical wall evaluated at 0.2: 0.0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb Cell 10\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m eval_vert_at_line \u001b[39m=\u001b[39m my_vert_wall\u001b[39m.\u001b[39mevaluate_halfplane(x_y\u001b[39m=\u001b[39mx_y)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mVertical wall evaluated at 0.2: \u001b[39m\u001b[39m{\u001b[39;00meval_vert_at_line\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIs xy \u001b[39m\u001b[39m{\u001b[39;00mx_y\u001b[39m}\u001b[39;00m\u001b[39m on wall: \u001b[39m\u001b[39m{\u001b[39;00mmy_vert_wall\u001b[39m.\u001b[39mtest_on_wall(x_y)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32m/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb Cell 10\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=72'>73</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtest_on_wall\u001b[39m(\u001b[39mself\u001b[39m, x_y):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=73'>74</a>\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\" Pass in a point that should be on the wall; should return 0\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m \u001b[39m     @param x_y - xy point\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m \u001b[39m     @preturn True or False\"\"\"\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/grimmc/VSCode/ClassShellCodeSolutions/IntroductoryPythonME203/Week_10_classes/a_tutorial_classes.ipynb#X12sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39misclose(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mevaluate_halfplane(x_y), \u001b[39m0.0\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "x_y = [0.2, 10.0]\n",
     "eval_vert_at_line = my_vert_wall.evaluate_halfplane(x_y=x_y)\n",
     "print(f\"Vertical wall evaluated at 0.2: {eval_vert_at_line}\")\n",
-    "assert(my_vert_wall.test_on_wall(x_y=x_y))"
+    "print(f\"Is xy {x_y} on wall: {my_vert_wall.test_on_wall(x_y)}\")\n",
+    "#assert(my_vert_wall.test_on_wall(x_y=x_y))"
    ]
   },
   {
@@ -376,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
