--- a/Python_tutorials/a_tutorial_matplotlib.ipynb
+++ b/Python_tutorials/a_tutorial_matplotlib.ipynb
@@ -18,6 +18,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: matplotlib in /Users/grimmc/anaconda3/lib/python3.11/site-packages (3.7.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (1.0.5)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (4.25.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (1.4.4)\n",
+      "Requirement already satisfied: numpy>=1.20 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (1.24.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (23.0)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (9.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (3.0.9)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from matplotlib) (2.8.2)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/grimmc/anaconda3/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install a pip package in the current Jupyter kernel\n",
+    "# Note: this is a safety check in case your JN install was not in the same place as your libraries\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install matplotlib"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -347,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
