--- a/Python_tutorials/a_tutorial_numpy.ipynb
+++ b/Python_tutorials/a_tutorial_numpy.ipynb
@@ -16,7 +16,19 @@
     "\n",
     "This is the way I like to import numpy. All numpy operations will start with np. I just find it easier (when reading the code) to have this visual cue that this function/operation came from numpy. It also prevents name conflicts - for example, if you accidentally name a variable \"min\" you won't \"overwrite\" numpy's min. Also, if you cut and paste your code somewhere else, it's easier to get it working without name conflicts.\n",
     "\n",
-    "Note: If you're NOT doing this in jupyter Notebooks, you'll need to install the numpy library"
+    "Note: You need to install the numpy library in order to use it. If you followed the instructions in the VS Code install then numpy should already be installed; but if you pick the wrong base python you may get a \"not installed\" error. The following cell will fix this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Install a pip package in the current Jupyter kernel\n",
+    "# Note: this is a safety check in case your JN install was not in the same place as your libraries\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install numpy"
    ]
   },
   {
@@ -82,28 +94,7 @@
     "\n",
     "TODO:\n",
     "- what happens if you set the type to int?\n",
-    "- what happens if you set the delimiter to something else? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"Data/proxy_test_grasp.csv\"\n",
-    "data_from_csv = np.loadtxt(file_name, dtype=\"float\", delimiter=\",\")\n",
-    "\n",
-    "print(f\"Size of csv data {data_from_csv.shape}\")\n",
-    "print(f\"First element: {data_from_csv[0, 0]}\")\n",
-    "print(f\"Last element: {data_from_csv[-1, -1]}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Example 2: Converting a list to a numpy array \n",
+    "- what happens if you set the delimiter to something else? \n",
     "\n",
     "Note: we'll cover advanced file reading later."
    ]
@@ -114,6 +105,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This creates a variable file_name that is a string. You could just put the string into loadtext\n",
+    "#  instead of creating a variable, but using a variable means you can ask what the filename is later - for example,\n",
+    "#  if you wanted to print out \"Filename is {}\"\n",
+    "file_name = \"Data/proxy_test_grasp.csv\"\n",
+    "\n",
+    "# This is the actual read from a file. The first parameter is the file name (a string). Note that the file has to be in the\n",
+    "#  correct place relative to this file for this to work. In this case, Week_1_data_structures has this jupyter notebook file\n",
+    "#  AND a folder named Data, inside of which is a file named proxy_test_grasp.csv (look at the explorer pane on the left)\n",
+    "#\n",
+    "# dtype=\"float\" says set the function parameter named dtype to be the type float. It's quite common for functions to have\n",
+    "#   additional parameters that have default values, and for you to be able to change them - say by using dtype=\"int\" - if\n",
+    "#   you need to.\n",
+    "# Often these additional parameters are strings - and the function expects the string to be one of a specific set of strings.\n",
+    "#  Go look up loadtxt (https://numpy.org/doc/stable/reference/generated/numpy.loadtxt.html) and you'll see the list of\n",
+    "#  parameters loadtxt has. Unfortunately, for dtype, they don't list what are acceptable types... \n",
+    "try:\n",
+    "    data_from_csv = np.loadtxt(file_name, dtype=\"float\", delimiter=\",\")\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"The file was not found; check that the data directory is in the current one and the file is in that directory\")\n",
+    "\n",
+    "# This is my favorite way to do print statements. The f\"\" means make a formatted string - see the week 0 tutorial on strings\n",
+    "#  Anything in {} is a variable that you want printed out. In this case, we'll print out the size of the variable\n",
+    "#    data.shape will be a tuple (width, height) because data_from_csv is an n x m array of data\n",
+    "print(f\"Size of csv data {data_from_csv.shape}\")\n",
+    "# This is a 2 dimensional array, so [0, 0] says get the element in the first row, first column\n",
+    "print(f\"Element in first row, first column: {data_from_csv[0, 0]}\")\n",
+    "print(f\"Element in first row, second column: {data_from_csv[0, 1]}\")\n",
+    "print(f\"Element in second row, first column: {data_from_csv[1, 0]}\")\n",
+    "# The -1 says get the last element (see slicing)\n",
+    "print(f\"Element in last row, last column: {data_from_csv[-1, -1]}\")\n",
+    "print(f\"Element in third row, last column: {data_from_csv[1, -1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2: Converting a list to a numpy array \n",
+    "\n",
+    "If you need to make a numpy array, but you aren't sure how big it will be, you can always make a list first, then convert it to a numpy array by doing **np.array(my_list)**. The list needs to be all of the same data type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A list with three elements in it. Each element is, in turn, a list with 2 elements\n",
     "my_list = [[0, 1], [2.0, 4.0], [5.0, 10.0]]\n",
     "data_from_list = np.array(my_list)\n",
     "\n",
@@ -121,9 +161,28 @@
     "print(my_list)\n",
     "print(\"List as numpy array, notice matrix format\")\n",
     "print(data_from_list)\n",
+    "# shape gives you the dimensions of the numpy array, size gives you the total number of elements\n",
+    "#  In this case 3 * 2 = 6\n",
     "print(f\"Data dimensions: {data_from_list.shape}, total number of elements: {data_from_list.size}\")\n",
-    "print(f\"First element: {data_from_list[0, 0]}\")\n",
-    "print(f\"Last element: {data_from_list[-1, -1]}\")"
+    "print(f\"First row, first column element: {data_from_list[0, 0]}\")\n",
+    "print(f\"Last row, last column element: {data_from_list[-1, -1]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print statements are ugly for large arrays\n",
+    "TODO: In the upper right there is a button labeled \"Variables\". Click on it.\n",
+    "\n",
+    "Tada, you now have a window where you can look at all of the variables you've defined\n",
+    "\n",
+    "Now click on **data_from_list** (can be a little slow sometimes).\n",
+    "\n",
+    "Now you have a window where you can scroll around and look at the data.\n",
+    "\n",
+    "Take a moment to look at data_from_csv. \n",
+    "\n"
    ]
   },
   {
@@ -151,9 +210,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_zeros = np.zeros([3, 5, 2], dtype=float)\n",
+    "data_zeros = np.zeros((2, 3), dtype=float)\n",
+    "# Numpy will do it's best to print out numpy arrays\n",
+    "print(data_zeros)\n",
     "print(f\"Number of dimensions: {data_zeros.ndim}, dimension sizes: {data_zeros.shape}, total number of elements: {data_zeros.size}\")\n",
-    "print(f\"First element: {data_zeros[0, 0, 0]}\")"
+    "print(f\"Element in first row, first column: {data_zeros[0, 0]}\")\n",
+    "\n",
+    "# Again, use the variable window to check out data_zeros\n"
    ]
   },
   {
@@ -175,9 +238,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# In this case we're going to use the tuple in data_from_csv.shape (which is 660 by 13) instead of putting numbers in\n",
+    "#  That way, if data_from_csv changes dimensions, this line still works.\n",
+    "# Note that this is exactly the same as\n",
+    "#   data_ones=np.ones((660, 13))\n",
+    "print(f\"Data dimensions of data_from_csv: {data_from_csv.shape}, total number of elements: {data_from_csv.size}\")\n",
+    "# Make it the same size\n",
     "data_ones = np.ones(data_from_csv.shape)\n",
-    "print(f\"Data dimensions: {data_ones.shape}, total number of elements: {data_ones.size}\")\n",
-    "print(f\"First element: {data_ones[0, 0]}\")"
+    "print(f\"Data dimensions of data_ones: {data_ones.shape}, total number of elements: {data_ones.size}\")\n",
+    "print(f\"First element of first row of data_ones: {data_ones[0, 0]}\")"
    ]
   },
   {
@@ -200,7 +269,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_evenly_spaced_numbers = np.linspace(-1.0, 1.0, 15)\n",
+    "# linspace (and a similar function, arange) are handy ways to make numpy arrays with evenly-spaced values\n",
+    "#   start is -1, end is 1.0, number of elements is 15 (see last print out)\n",
+    "data_evenly_spaced_numbers = np.linspace(start=-1.0, stop=1.0, num=15)\n",
     "print(f\"Linspace dimensions: {data_evenly_spaced_numbers.shape}, total number of elements: {data_evenly_spaced_numbers.size}\")\n",
     "print(f\"First value: {data_evenly_spaced_numbers[0]}, last value: {data_evenly_spaced_numbers[-1]}\")"
    ]
@@ -211,7 +282,7 @@
    "source": [
     "### Random numbers\n",
     "\n",
-    "Making an array of random numbers\n",
+    "Making an array of random numbers. \n",
     "Don't be confused by the parameter being called size - it can take a tuple of dimensions (shape)\n",
     "\n",
     "TODO: check the dimension of the array/matrix"
@@ -223,8 +294,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This makes a 3x10 array of numbers, all of which are between -1 and 1\n",
     "data_random = np.random.uniform(low=-1, high=1, size=(3, 10))\n",
     "print(f\"Random uniform data, size {data_random.shape}\")\n",
+    "# Print out statistics on the array. Note that you can call functions inside of the {}\n",
+    "# The numbers are *between* -1 and 1, but may not actually get to -1, The mean should be close to zero\n",
+    "print(f\"Min {np.min(data_random)}, max {np.max(data_random)}, mean {np.mean(data_random)}\")\n",
     "print(data_random)"
    ]
   },
@@ -236,11 +311,7 @@
     "\n",
     "There are two concepts here, one easy, one hard\n",
     " - Concept 1: operators (+, -, <, etc) are all automatically done on all elements (for loops). All arrays in the equation have to have the same dimensions\n",
-    " - Concept 2: If statements are accomplished using boolean indexing [if statement]. \n",
-    "\n",
-    "Using [] selects a part of the array - so the dimensions may be different\n",
-    "\n",
-    "Mathematical operations usually create new arrays, boolean indexing does not (usually)."
+    " - Concept 2: If statements are accomplished using boolean indexing [if statement]. \n"
    ]
   },
   {
@@ -267,8 +338,11 @@
     "# A more complicated example - shift and scale the entire data set so that the min is zero, the max is one\n",
     "min_all_data = np.min(data_from_csv)\n",
     "max_all_data = np.max(data_from_csv)\n",
+    "# Subtract this from all the data to make the smallest value be 0\n",
     "shift_amount = min_all_data\n",
+    "# The data goes from min to max - scale by (max-min) to make it go zero \n",
     "scale_amount = 1.0 / (max_all_data - min_all_data)\n",
+    "# Subtract the min and scale - now the min should be zero and the max 1\n",
     "data_new_csv = scale_amount * (data_from_csv - shift_amount)\n",
     "print(f\"Shifted minimum: {np.min(data_new_csv)} and maximum: {np.max(data_new_csv)}\")"
    ]
@@ -326,7 +400,7 @@
     "# Pre-alloc the matrix to put the data back into - since we know the size of the data, it's easiest to make a new\n",
     "#  numpy array of the right size and then copy data in and edit it after it's copied in\n",
     "data_new_csv = np.zeros(data_from_csv.shape)\n",
-    "# for each column in the data\n",
+    "# for each column in the data. .shape[1] is the number of columns\n",
     "for c in range(0, data_from_csv.shape[1]):\n",
     "    # Copy the data from the old array to the new one\n",
     "    #   Note the : and the ,  and the [r,c] - array indexing/slicing for numpy arrays is pretty much the same as for lists\n",
@@ -609,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
